--- a/style.css
+++ b/style.css
@@ -17,6 +17,36 @@
   justify-content: flex-end;
   list-style-type: none;
 }
+.no1:hover{
+  transform: scale(1.1);
+  transition: 0.7s;
+  color: #ffa500;
+}
+.no2:hover{
+  transform: scale(1.1);
+  transition: 0.7s;
+  color: #ffa500;
+}
+.no3:hover{
+  transform: scale(1.1);
+  transition: 0.7s;
+  color: #ffa500;
+}
+.no4:hover{
+  transform: scale(1.1);
+  transition: 0.7s;
+  color: #ffa500;
+}
+.no5:hover{
+  transform: scale(1.1);
+  transition: 0.7s;
+  color: #ffa500;
+}
+.no6:hover{
+  transform: scale(1.1);
+  transition: 0.7s;
+  color: #ffa500;
+}
 .nav-links li {
   margin: 10px 10px 0px 0px;
   font-size: 16px;
@@ -28,23 +58,32 @@
   border-radius: 20px;
   margin: 10px 10px;
   text-decoration: none;
+  border-style: none;
   color: #fff;
   font-weight: bold;
+}
+.CV:hover {
+  background-color: #cf9a36;
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 a {
   color: inherit;
   text-decoration: none;
 }
-.download-cv:hover {
-  background-color: #ff8c00;
-}
 .hire{
+  border-style: none;
   background-color: #ffa500;
   padding: 5px;
   border-radius: 5px;
   text-decoration: none;
   color: #fff;
   font-weight: bold;
+}
+.hire:hover{
+  background-color: #cf9a36;
+  transform: scale(1.1);
+  transition: 0.7s;
 }
 .content{
   margin-top: 50px;
@@ -53,7 +92,7 @@ a {
   gap: 180px;
 }
 .profile img{
-  border-radius: 50px;
+  border-radius: 80%;
 }
 .social img{
   width: 20px;
@@ -61,9 +100,13 @@ a {
   margin-top: -30px
 }
 .pic1 img{
-  width: 280px;
-  height: 380px;
-  border-radius: 50px;
+  width: 290px;
+  height: 375px;
+  border-radius: 50%;
+}
+.social img:hover{
+  transform: scale(1.6);
+  transition: 0.7s;
 }
 .about-me{
   font-size: 40px;
@@ -84,7 +127,8 @@ a {
   justify-content: center;
   gap: 20px;
 }
-.box {
+
+.box1 {
   padding: 10px;
   width: 220px; 
   background: white;
@@ -92,6 +136,49 @@ a {
   flex-direction: column;
   gap: 8px;
   background-color:rgb(233, 229, 229);
+}
+.box1:hover{
+  transition: 0.7s;
+  transform: scale(1.1);
+}
+.box2 {
+  padding: 10px;
+  width: 220px; 
+  background: white;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color:rgb(233, 229, 229);
+}
+.box2:hover{
+  transition: 0.7s;
+  transform: scale(1.1);
+}
+.box3 {
+  padding: 10px;
+  width: 220px; 
+  background: white;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color:rgb(233, 229, 229);
+}
+.box3:hover{
+  transition: 0.7s;
+  transform: scale(1.1);
+}
+.box4 {
+  padding: 10px;
+  width: 220px; 
+  background: white;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color:rgb(233, 229, 229);
+}
+.box4:hover{
+  transition: 0.7s;
+  transform: scale(1.1);
 }
 .icon {
   font-size: 24px;
@@ -123,46 +210,42 @@ a {
   padding-top: 30px;
   padding-bottom: 20px;
 }
-.all{
+.you button{
   border: 1px solid black;
+  background-color: rgb(221, 224, 228);
   border-radius: 5px;
   padding: 5px 10px 5px 10px;
-  background-color:rgb(197, 194, 190);
+  border-style: none;
 }
-.me{
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 5px 10px 5px 10px;
-  background-color:rgb(197, 194, 190);
-}
-.you{
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 5px 10px 5px 10px;
-  background-color: #ec6b21;
-}
-.they{
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 5px 10px 5px 10px;
-  background-color:rgb(197, 194, 190);
-}
-.them{
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 5px 10px 5px 10px;
-  background-color:rgb(197, 194, 190);
+.you button:hover{
+  background-color: #ffa500;
+  color: white;
+  transform: scale(1.1);
+  transition: 0.7s;
 }
 .roll{
   font-size: 40px;
   text-align: center;
   margin-bottom: 20px;
-}
+  border-style: none;
+} 
 .project{
   text-align: center;
 }
 .web-image{
   padding-top: 60px;
+}
+.web1:hover{
+  transform: scale(1.2);
+  transition: 0.7s;
+}
+.web2:hover{
+  transform: scale(1.2);
+  transition: 0.7s;
+}
+.web3:hover{
+  transform: scale(1.2);
+  transition: 0.7s;
 }
 .together{
   font-size: 40px;
@@ -172,26 +255,43 @@ a {
  border: 1px solid black;
   border-radius: 5px;
   padding: 5px 10px 5px 10px;
-  background-color:rgb(197, 194, 190);
+  background-color:rgb(221, 224, 228);
+  border-style: none;
+}
+.Email:hover{
+  background-color: #cecece;
+  transform: scale(1.1);
+  transition: 0.7s;
+}
+.Email:focus{
+  outline-color: #ffa500;
 }
 .Lorem{
   margin-top: -70px;
   margin-bottom: 50px;
 }
-.contact{
+.contact {
   border: 1px solid black;
   border-radius: 5px;
   padding: 5px 10px 5px 10px;
-  background-color: #ec6b21;
+  color: white;
+  background-color: #ffa500;
+  border-style: none;
+}
+.contact:hover{
+  transform: scale(1.1);
+  transition: 0.5s;
+  background-color: #cf9a36;
+  color: white;
+
 }
 .lastpart{
   text-align: center;
 }
 .social{
   text-align: center;
-  margin-top: 20px;
+  margin-top: 40px;
 }
-
 .foot-links {
   display: flex;
   justify-content: center;
@@ -209,3 +309,89 @@ a {
   background-color: darkgray;
   padding: 5px;
 }
+
+@media screen and (max-width: 320px) {
+  .logo h1{
+    font-size: 15px;
+}
+.nav-links{
+display: flex;
+flex-direction: column;
+margin-top: 50px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.content h1{
+  font-size: 25px;
+}
+.content p{
+  font-size: 15px;
+}
+.secondpart{
+  display: flex;
+  flex-direction: column ;
+  text-align: center;
+}
+.para{
+  margin-top: -30px;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -60px;
+}
+.web-image{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.hire{
+  padding: -10px;
+}
+.social{
+  margin-right: 20px;
+}
+.profile{
+  margin-top:-120px;
+}
+.pic1{
+  margin-top: 30px;
+}
+.detail{
+  margin-top: -200px;
+}
+.roll{
+  font-size: 25px;
+}
+.project p{
+  font-size: 15px;
+}
+#bold{
+  font-size: 25px;
+}
+.about-me {
+  font-size: 25px;
+  margin-bottom: 40px;
+}
+.service p{
+  font-size: 15px;
+}
+.foot-links{
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.footer p{
+  font-size: -20px;
+}
+.foot-links li{
+  margin-top: -10px;
+  text-align: center;
+  margin-right: 40px;
+}
+} 
