--- a/style.css
+++ b/style.css
@@ -306,12 +306,15 @@ a {
 .footer{
   text-align: center;
   margin-top: 50px;
-  background-color: darkgray;
+  background-color: rgb(224, 222, 222);
   padding: 5px;
 }
 
 @media screen and (max-width: 480px) {
-  .logo h1{
+body{
+  margin: 0 10px 0 10px;
+}
+.logo h1{
     font-size: 15px;
 }
 .nav-links{
@@ -348,6 +351,7 @@ margin-top: 50px;
   display: flex;
   flex-direction: column;
   gap: 30px;
+  margin: 50px;
 }
 .hire{
   padding: -10px;
@@ -360,6 +364,7 @@ margin-top: 50px;
 }
 .pic1{
   margin-top: 30px;
+  display: none;
 }
 .detail{
   margin-top: -200px;
@@ -376,6 +381,7 @@ margin-top: 50px;
 .about-me {
   font-size: 25px;
   margin-bottom: 40px;
+  margin-top: 220px;
 }
 .service p{
   font-size: 15px;
@@ -394,4 +400,92 @@ margin-top: 50px;
   text-align: center;
   margin-right: 40px;
 }
+.contact{
+  padding: -15px;
+  font-size: 10px;
+}
+.hire{
+  padding: -10px;
+  font-size: 12px;
+}
 } 
+@media screen and (min-width: 480px) and (max-width: 768px){
+.logo h1{
+font-size: 20px;
+}
+.nav-links{
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+
+}
+.content p{
+  font-size: 15px;
+}
+.content h1{
+  font-size: 25px;
+}
+.profile{
+  margin-top: -100px;
+}
+.secondpart{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 30px;
+}
+.about-me {
+  font-size: 25px;
+  margin-bottom: 40px;
+}
+.para{
+  font-size: 15px;
+  margin-top: -20px;
+}
+#bold{
+  font-size: 25px;
+}
+.service{
+  text-align: center;
+}
+.service p{
+  font-size: 15px;
+}
+.container{
+  display: flex;
+  flex-wrap: wrap;
+}
+.roll{
+  font-size: 25px;
+}
+.project p{
+  font-size: 15px;
+}
+.web-image{
+  gap: 50px;
+}
+.together{
+  font-size: 25px;
+  padding-bottom: 3%;
+}
+.lorem{
+  font-size: 15px;
+}
+.pic1{
+  display: none;
+}
+.contact{
+  padding: -15px;
+  font-size: 12px;
+}
+.hire{
+  padding: -10px;
+  font-size: 12px;
+}
+}
