--- a/style.css
+++ b/style.css
@@ -1,4 +1,32 @@
 
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 8px;
+  background: orange; /* Change from red to orange */
+  border-radius: 5px;
+  outline: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: orange; /* Change from red to orange */
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background: orange; /* Change from red to orange */
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 .navbar {
   display: flex;
   justify-content: space-evenly;
