--- a/style.css
+++ b/style.css
@@ -12,17 +12,17 @@ input[type="range"] {
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   background: orange; /* Change from red to orange */
   border-radius: 50%;
   cursor: pointer;
 }
 
 input[type="range"]::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  background: orange; /* Change from red to orange */
+  width: 15px;
+  height: 15px;
+  background: orange; 
   border-radius: 50%;
   cursor: pointer;
 }
